! Finally-- follow_me is pixel-perfect. I took an hour of my time to reconsider the math of it all, and found 3 little bugs in my calculations; Neither the separator height not the fixed userbox top position were taken into account, and ended up doing strange things on very short posts. Also, there was some kind of a margin collapse trick that happened in the user name and made positioning more complicated; replace the margin with a padding, it works just the same. It's all in the past, now. I can finally devote my time to another cool feature. I wish. (topic.js, sections.css)

--- a/Themes/default/skins/sections.css
+++ b/Themes/default/skins/sections.css
@@ -305,7 +305,7 @@ hr.sep
 	vertical-align: top
 
 	h4
-		margin: 3px 0 3px 16px // 19px originally.
+		padding: 3px 0 3px 16px // 19px originally.
 		font: 400 120%/120% $subject_font
 
 	ul.info extends ul.reset
